@@ -1,5 +1,12 @@
 Changes with Apache 1.3.21
 
+  *) Enhancement of mod_auth to handle 'Require file-owner' and
+     'Require file-group'.  This allows access IFF the authenticated
+     username (from the appropriate AuthUserFile database) matches
+     the username of the UID that owns the document (and equivalent
+     checking for file GID and user's membership in AuthGroupFile).
+     See the mod_auth documentation for examples. [Ken Coar]
+
   *) Addition of the AcceptMutex runtime directive. The accept mutex
      method is now runtime controllable. The suite of available methods
      per platform is defined at compile time (with HAVE_FOO_SERIALIZED_ACCEPT
